--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,31 +1,17 @@
-.App {
-  text-align: center;
-  font-family: "Courier New", monospace;
+.ant-layout-header {
+  background: white !important;
+}
+
+.content {
+  min-height: calc(100vh - 112px) !important;
+}
+
+.header {
+  background: white;
   width: 100%;
 }
 
-h1 {
-  font-weight: normal;
-  font-size: 42px;
-}
-
-textarea {
-  list-style: none;
-  padding: 0;
-  font-size: 32px;
-  margin-bottom: 2em;
-}
-
-.more {
-  font-size: 32px;
-  font-family: "Courier New", monospace;
-  border: 2px solid #000;
-  background-color: #fff;
-  padding: 10px 25px;
-}
-.more:hover {
-  background-color: #FDD836;
-}
-.more:active {
-  background-color: #FFEFA9;
+.footer {
+  background: black;
+  width: 100%;
 }
