--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+}
 .ant-layout-header {
   background: white !important;
 }
